# lenguaje1

./: .gitignore  README.md
EjercicioExamen1/: Makefile.am  configure.ac  main.c
Parametros/: Parametros.dev  Parametros.layout  main.c
RecorrerMatrices/: RecorreMatriz.dev  RecorreMatriz.layout  main.c
RecorrerVectores/: RecorridoVector.dev  RecorridoVector.layout  main.c
aritmetica_punteros/: Makefile.am  Makefile.in  configure  configure.ac  main.c
data_types_size/: Makefile.am  Makefile.in  configure  configure.ac  main.c
estructuras/: estructuras.cbp  estructuras.depend  main.c
examen1/: examen1.cbp  examen1.depend  main.c
pilas_colas/pilas/: main.c  pilas.cbp  pilas.depend
