## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = aritmetica_punteros

aritmetica_punteros_SOURCES = \
	main.c

aritmetica_punteros_LDFLAGS = 

aritmetica_punteros_LDADD = 

